fix(chat-dropdown): set max-height of the chat dropdown to 300px to prevent intercom button from overlapping

--- a/app/client/stylesheets/components/compositions/pu-composition-tribestart.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-tribestart.sass
@@ -16,8 +16,8 @@
             margin-top: 20px
 
     nav
-        position: fixed
-        top: 60px
+        position: absolute
+        top: 0
         right: 0
         padding-top: 30px
         padding-right: 30px
